<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".SalesPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:id="@+id/btnNewOrder"
                android:text="@string/btnNewOrder"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:id="@+id/btnNewItem"
                android:text="@string/btnNewItem" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblItem"
                android:text="@string/lblItem"
                android:textSize="24sp"
                android:padding="10sp"
                android:fontFamily="Open Sans"/>
            
            <AutoCompleteTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10sp"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:id="@+id/autocompleteTxtItem"
                android:fontFamily="Open Sans"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:padding="10sp"
                android:textSize="24sp"
                android:text="@string/lblQuantity"
                android:fontFamily="Open Sans"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10sp"
                android:inputType="text"
                android:gravity="right"
                android:id="@+id/editTxtQuantity"
                android:fontFamily="Open Sans"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.40"
                android:padding="10sp"
                android:textSize="24sp"
                android:text="@string/lblUnitPrice" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textSize="24sp"
                android:padding="10sp"
                android:inputType="text"
                android:id="@+id/editTxtUnitPrice"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:padding="10sp"
                android:id="@+id/btnTotal"
                android:text="@string/btnTotal"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10sp"
                android:textSize="28sp"
                android:text="@string/txtTotal"
                android:id="@+id/txtTotal"
                android:gravity="right"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/txtSummary"
                android:textSize="30sp"
                android:textColor="#ff5476" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
